Projects/Ampliacion_Operador_ternario/src/parser/y.output
   0  $accept : program $end

   1  program : opt_def_glob_var main

   2  glob_def : var_def
   3           | func_def

   4  opt_def_glob_var : opt_def_glob_var glob_def
   5                   |

   6  var_def : p_type list_ident ';'
   7          | array list_ident ';'
   8          | struct_type list_ident ';'

   9  local_var_def : var_def

  10  opt_list_local_var : opt_list_local_var local_var_def
  11                     |

  12  opt_list_fields : opt_list_fields type list_ident ';'
  13                  |

  14  struct_type : STRUCT '{' opt_list_fields '}'

  15  main : VOID MAIN '(' ')' '{' opt_list_local_var statements '}'

  16  func_def : p_type ID '(' opt_list_param ')' '{' opt_list_local_var statements '}'
  17           | VOID ID '(' opt_list_param ')' '{' opt_list_local_var statements '}'

  18  list_param : list_param ',' p_type ID
  19             | p_type ID

  20  opt_list_param : list_param
  21                 |

  22  p_type : INT
  23         | DOUBLE
  24         | CHAR

  25  array : type '[' INT_CONSTANT ']'

  26  type : p_type
  27       | array
  28       | struct_type

  29  list_ident : list_ident ',' ID
  30             | ID

  31  statements : statements statement
  32             |

  33  statement : RETURN exp ';'
  34            | READ list_exp ';'
  35            | WRITE list_exp ';'
  36            | if_else
  37            | while
  38            | exp '=' exp ';'
  39            | ID '(' opt_list_exp ')' ';'
  40            | ternario

  41  ternario : '(' exp ')' '?' statement ':' statement ';'
  42           | exp '=' '(' exp ')' '?' exp ':' exp ';'

  43  while : WHILE '(' exp ')' '{' statements '}'
  44        | WHILE '(' exp ')' statement

  45  if_else : IF '(' exp ')' '{' statements '}' ELSE '{' statements '}'
  46          | IF '(' exp ')' '{' statements '}' ELSE statement
  47          | IF '(' exp ')' statement ELSE '{' statements '}'
  48          | IF '(' exp ')' statement ELSE statement
  49          | IF '(' exp ')' '{' statements '}'
  50          | IF '(' exp ')' statement

  51  opt_list_exp : list_exp
  52               |

  53  list_exp : list_exp ',' exp
  54           | exp

  55  exp : exp '+' exp
  56      | exp '*' exp
  57      | exp '/' exp
  58      | exp '-' exp
  59      | exp '%' exp
  60      | exp EQ exp
  61      | exp NOT_EQ exp
  62      | exp '>' exp
  63      | exp '<' exp
  64      | exp L_EQ exp
  65      | exp G_EQ exp
  66      | exp AND exp
  67      | exp OR exp
  68      | '(' p_type ')' exp
  69      | exp '[' exp ']'
  70      | exp '.' ID
  71      | ID '(' opt_list_exp ')'
  72      | '-' exp
  73      | '(' exp ')'
  74      | '!' exp
  75      | INT_CONSTANT
  76      | ID
  77      | CHAR_CONSTANT
  78      | REAL_CONSTANT

state 0
	$accept : . program $end  (0)
	opt_def_glob_var : .  (5)

	.  reduce 5

	program  goto 1
	opt_def_glob_var  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : opt_def_glob_var . main  (1)
	opt_def_glob_var : opt_def_glob_var . glob_def  (4)

	VOID  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	.  error

	main  goto 8
	glob_def  goto 9
	var_def  goto 10
	func_def  goto 11
	p_type  goto 12
	array  goto 13
	struct_type  goto 14
	type  goto 15


state 3
	main : VOID . MAIN '(' ')' '{' opt_list_local_var statements '}'  (15)
	func_def : VOID . ID '(' opt_list_param ')' '{' opt_list_local_var statements '}'  (17)

	ID  shift 16
	MAIN  shift 17
	.  error


state 4
	p_type : DOUBLE .  (23)

	.  reduce 23


state 5
	p_type : CHAR .  (24)

	.  reduce 24


state 6
	struct_type : STRUCT . '{' opt_list_fields '}'  (14)

	'{'  shift 18
	.  error


state 7
	p_type : INT .  (22)

	.  reduce 22


state 8
	program : opt_def_glob_var main .  (1)

	.  reduce 1


state 9
	opt_def_glob_var : opt_def_glob_var glob_def .  (4)

	.  reduce 4


state 10
	glob_def : var_def .  (2)

	.  reduce 2


state 11
	glob_def : func_def .  (3)

	.  reduce 3


state 12
	var_def : p_type . list_ident ';'  (6)
	func_def : p_type . ID '(' opt_list_param ')' '{' opt_list_local_var statements '}'  (16)
	type : p_type .  (26)

	ID  shift 19
	'['  reduce 26

	list_ident  goto 20


state 13
	var_def : array . list_ident ';'  (7)
	type : array .  (27)

	ID  shift 21
	'['  reduce 27

	list_ident  goto 22


state 14
	var_def : struct_type . list_ident ';'  (8)
	type : struct_type .  (28)

	ID  shift 21
	'['  reduce 28

	list_ident  goto 23


state 15
	array : type . '[' INT_CONSTANT ']'  (25)

	'['  shift 24
	.  error


state 16
	func_def : VOID ID . '(' opt_list_param ')' '{' opt_list_local_var statements '}'  (17)

	'('  shift 25
	.  error


state 17
	main : VOID MAIN . '(' ')' '{' opt_list_local_var statements '}'  (15)

	'('  shift 26
	.  error


state 18
	struct_type : STRUCT '{' . opt_list_fields '}'  (14)
	opt_list_fields : .  (13)

	.  reduce 13

	opt_list_fields  goto 27


state 19
	func_def : p_type ID . '(' opt_list_param ')' '{' opt_list_local_var statements '}'  (16)
	list_ident : ID .  (30)

	'('  shift 28
	';'  reduce 30
	','  reduce 30


state 20
	var_def : p_type list_ident . ';'  (6)
	list_ident : list_ident . ',' ID  (29)

	';'  shift 29
	','  shift 30
	.  error


state 21
	list_ident : ID .  (30)

	.  reduce 30


state 22
	var_def : array list_ident . ';'  (7)
	list_ident : list_ident . ',' ID  (29)

	';'  shift 31
	','  shift 30
	.  error


state 23
	var_def : struct_type list_ident . ';'  (8)
	list_ident : list_ident . ',' ID  (29)

	';'  shift 32
	','  shift 30
	.  error


state 24
	array : type '[' . INT_CONSTANT ']'  (25)

	INT_CONSTANT  shift 33
	.  error


state 25
	func_def : VOID ID '(' . opt_list_param ')' '{' opt_list_local_var statements '}'  (17)
	opt_list_param : .  (21)

	DOUBLE  shift 4
	CHAR  shift 5
	INT  shift 7
	')'  reduce 21

	p_type  goto 34
	opt_list_param  goto 35
	list_param  goto 36


state 26
	main : VOID MAIN '(' . ')' '{' opt_list_local_var statements '}'  (15)

	')'  shift 37
	.  error


state 27
	opt_list_fields : opt_list_fields . type list_ident ';'  (12)
	struct_type : STRUCT '{' opt_list_fields . '}'  (14)

	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	'}'  shift 38
	.  error

	p_type  goto 39
	array  goto 40
	struct_type  goto 41
	type  goto 42


state 28
	func_def : p_type ID '(' . opt_list_param ')' '{' opt_list_local_var statements '}'  (16)
	opt_list_param : .  (21)

	DOUBLE  shift 4
	CHAR  shift 5
	INT  shift 7
	')'  reduce 21

	p_type  goto 34
	opt_list_param  goto 43
	list_param  goto 36


state 29
	var_def : p_type list_ident ';' .  (6)

	.  reduce 6


state 30
	list_ident : list_ident ',' . ID  (29)

	ID  shift 44
	.  error


state 31
	var_def : array list_ident ';' .  (7)

	.  reduce 7


state 32
	var_def : struct_type list_ident ';' .  (8)

	.  reduce 8


state 33
	array : type '[' INT_CONSTANT . ']'  (25)

	']'  shift 45
	.  error


state 34
	list_param : p_type . ID  (19)

	ID  shift 46
	.  error


state 35
	func_def : VOID ID '(' opt_list_param . ')' '{' opt_list_local_var statements '}'  (17)

	')'  shift 47
	.  error


state 36
	list_param : list_param . ',' p_type ID  (18)
	opt_list_param : list_param .  (20)

	','  shift 48
	')'  reduce 20


state 37
	main : VOID MAIN '(' ')' . '{' opt_list_local_var statements '}'  (15)

	'{'  shift 49
	.  error


state 38
	struct_type : STRUCT '{' opt_list_fields '}' .  (14)

	.  reduce 14


state 39
	type : p_type .  (26)

	.  reduce 26


state 40
	type : array .  (27)

	.  reduce 27


state 41
	type : struct_type .  (28)

	.  reduce 28


state 42
	opt_list_fields : opt_list_fields type . list_ident ';'  (12)
	array : type . '[' INT_CONSTANT ']'  (25)

	ID  shift 21
	'['  shift 24
	.  error

	list_ident  goto 50


state 43
	func_def : p_type ID '(' opt_list_param . ')' '{' opt_list_local_var statements '}'  (16)

	')'  shift 51
	.  error


state 44
	list_ident : list_ident ',' ID .  (29)

	.  reduce 29


state 45
	array : type '[' INT_CONSTANT ']' .  (25)

	.  reduce 25


state 46
	list_param : p_type ID .  (19)

	.  reduce 19


state 47
	func_def : VOID ID '(' opt_list_param ')' . '{' opt_list_local_var statements '}'  (17)

	'{'  shift 52
	.  error


state 48
	list_param : list_param ',' . p_type ID  (18)

	DOUBLE  shift 4
	CHAR  shift 5
	INT  shift 7
	.  error

	p_type  goto 53


state 49
	main : VOID MAIN '(' ')' '{' . opt_list_local_var statements '}'  (15)
	opt_list_local_var : .  (11)

	.  reduce 11

	opt_list_local_var  goto 54


state 50
	opt_list_fields : opt_list_fields type list_ident . ';'  (12)
	list_ident : list_ident . ',' ID  (29)

	';'  shift 55
	','  shift 30
	.  error


state 51
	func_def : p_type ID '(' opt_list_param ')' . '{' opt_list_local_var statements '}'  (16)

	'{'  shift 56
	.  error


state 52
	func_def : VOID ID '(' opt_list_param ')' '{' . opt_list_local_var statements '}'  (17)
	opt_list_local_var : .  (11)

	.  reduce 11

	opt_list_local_var  goto 57


state 53
	list_param : list_param ',' p_type . ID  (18)

	ID  shift 58
	.  error


state 54
	opt_list_local_var : opt_list_local_var . local_var_def  (10)
	main : VOID MAIN '(' ')' '{' opt_list_local_var . statements '}'  (15)
	statements : .  (32)

	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	INT_CONSTANT  reduce 32
	REAL_CONSTANT  reduce 32
	RETURN  reduce 32
	ID  reduce 32
	WRITE  reduce 32
	IF  reduce 32
	READ  reduce 32
	WHILE  reduce 32
	CHAR_CONSTANT  reduce 32
	'!'  reduce 32
	'-'  reduce 32
	'('  reduce 32
	'}'  reduce 32

	var_def  goto 59
	p_type  goto 60
	array  goto 13
	struct_type  goto 14
	local_var_def  goto 61
	type  goto 15
	statements  goto 62


state 55
	opt_list_fields : opt_list_fields type list_ident ';' .  (12)

	.  reduce 12


state 56
	func_def : p_type ID '(' opt_list_param ')' '{' . opt_list_local_var statements '}'  (16)
	opt_list_local_var : .  (11)

	.  reduce 11

	opt_list_local_var  goto 63


state 57
	opt_list_local_var : opt_list_local_var . local_var_def  (10)
	func_def : VOID ID '(' opt_list_param ')' '{' opt_list_local_var . statements '}'  (17)
	statements : .  (32)

	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	INT_CONSTANT  reduce 32
	REAL_CONSTANT  reduce 32
	RETURN  reduce 32
	ID  reduce 32
	WRITE  reduce 32
	IF  reduce 32
	READ  reduce 32
	WHILE  reduce 32
	CHAR_CONSTANT  reduce 32
	'!'  reduce 32
	'-'  reduce 32
	'('  reduce 32
	'}'  reduce 32

	var_def  goto 59
	p_type  goto 60
	array  goto 13
	struct_type  goto 14
	local_var_def  goto 61
	type  goto 15
	statements  goto 64


state 58
	list_param : list_param ',' p_type ID .  (18)

	.  reduce 18


state 59
	local_var_def : var_def .  (9)

	.  reduce 9


state 60
	var_def : p_type . list_ident ';'  (6)
	type : p_type .  (26)

	ID  shift 21
	'['  reduce 26

	list_ident  goto 20


state 61
	opt_list_local_var : opt_list_local_var local_var_def .  (10)

	.  reduce 10


state 62
	main : VOID MAIN '(' ')' '{' opt_list_local_var statements . '}'  (15)
	statements : statements . statement  (31)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	RETURN  shift 67
	ID  shift 68
	WRITE  shift 69
	IF  shift 70
	READ  shift 71
	WHILE  shift 72
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 76
	'}'  shift 77
	.  error

	statement  goto 78
	exp  goto 79
	if_else  goto 80
	while  goto 81
	ternario  goto 82


state 63
	opt_list_local_var : opt_list_local_var . local_var_def  (10)
	func_def : p_type ID '(' opt_list_param ')' '{' opt_list_local_var . statements '}'  (16)
	statements : .  (32)

	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	INT_CONSTANT  reduce 32
	REAL_CONSTANT  reduce 32
	RETURN  reduce 32
	ID  reduce 32
	WRITE  reduce 32
	IF  reduce 32
	READ  reduce 32
	WHILE  reduce 32
	CHAR_CONSTANT  reduce 32
	'!'  reduce 32
	'-'  reduce 32
	'('  reduce 32
	'}'  reduce 32

	var_def  goto 59
	p_type  goto 60
	array  goto 13
	struct_type  goto 14
	local_var_def  goto 61
	type  goto 15
	statements  goto 83


state 64
	func_def : VOID ID '(' opt_list_param ')' '{' opt_list_local_var statements . '}'  (17)
	statements : statements . statement  (31)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	RETURN  shift 67
	ID  shift 68
	WRITE  shift 69
	IF  shift 70
	READ  shift 71
	WHILE  shift 72
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 76
	'}'  shift 84
	.  error

	statement  goto 78
	exp  goto 79
	if_else  goto 80
	while  goto 81
	ternario  goto 82


state 65
	exp : INT_CONSTANT .  (75)

	.  reduce 75


state 66
	exp : REAL_CONSTANT .  (78)

	.  reduce 78


state 67
	statement : RETURN . exp ';'  (33)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	exp  goto 87


state 68
	statement : ID . '(' opt_list_exp ')' ';'  (39)
	exp : ID . '(' opt_list_exp ')'  (71)
	exp : ID .  (76)

	'('  shift 88
	EQ  reduce 76
	OR  reduce 76
	AND  reduce 76
	NOT_EQ  reduce 76
	G_EQ  reduce 76
	L_EQ  reduce 76
	'='  reduce 76
	'>'  reduce 76
	'<'  reduce 76
	'+'  reduce 76
	'-'  reduce 76
	'*'  reduce 76
	'/'  reduce 76
	'%'  reduce 76
	'['  reduce 76
	'.'  reduce 76


state 69
	statement : WRITE . list_exp ';'  (35)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	exp  goto 89
	list_exp  goto 90


state 70
	if_else : IF . '(' exp ')' '{' statements '}' ELSE '{' statements '}'  (45)
	if_else : IF . '(' exp ')' '{' statements '}' ELSE statement  (46)
	if_else : IF . '(' exp ')' statement ELSE '{' statements '}'  (47)
	if_else : IF . '(' exp ')' statement ELSE statement  (48)
	if_else : IF . '(' exp ')' '{' statements '}'  (49)
	if_else : IF . '(' exp ')' statement  (50)

	'('  shift 91
	.  error


state 71
	statement : READ . list_exp ';'  (34)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	exp  goto 89
	list_exp  goto 92


state 72
	while : WHILE . '(' exp ')' '{' statements '}'  (43)
	while : WHILE . '(' exp ')' statement  (44)

	'('  shift 93
	.  error


state 73
	exp : CHAR_CONSTANT .  (77)

	.  reduce 77


state 74
	exp : '!' . exp  (74)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	exp  goto 94


state 75
	exp : '-' . exp  (72)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	exp  goto 95


state 76
	ternario : '(' . exp ')' '?' statement ':' statement ';'  (41)
	exp : '(' . p_type ')' exp  (68)
	exp : '(' . exp ')'  (73)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	DOUBLE  shift 4
	CHAR  shift 5
	INT  shift 7
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	p_type  goto 96
	exp  goto 97


state 77
	main : VOID MAIN '(' ')' '{' opt_list_local_var statements '}' .  (15)

	.  reduce 15


state 78
	statements : statements statement .  (31)

	.  reduce 31


state 79
	statement : exp . '=' exp ';'  (38)
	ternario : exp . '=' '(' exp ')' '?' exp ':' exp ';'  (42)
	exp : exp . '+' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '-' exp  (58)
	exp : exp . '%' exp  (59)
	exp : exp . EQ exp  (60)
	exp : exp . NOT_EQ exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . '<' exp  (63)
	exp : exp . L_EQ exp  (64)
	exp : exp . G_EQ exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . '[' exp ']'  (69)
	exp : exp . '.' ID  (70)

	EQ  shift 98
	OR  shift 99
	AND  shift 100
	NOT_EQ  shift 101
	G_EQ  shift 102
	L_EQ  shift 103
	'='  shift 104
	'>'  shift 105
	'<'  shift 106
	'+'  shift 107
	'-'  shift 108
	'*'  shift 109
	'/'  shift 110
	'%'  shift 111
	'['  shift 112
	'.'  shift 113
	.  error


state 80
	statement : if_else .  (36)

	.  reduce 36


state 81
	statement : while .  (37)

	.  reduce 37


state 82
	statement : ternario .  (40)

	.  reduce 40


state 83
	func_def : p_type ID '(' opt_list_param ')' '{' opt_list_local_var statements . '}'  (16)
	statements : statements . statement  (31)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	RETURN  shift 67
	ID  shift 68
	WRITE  shift 69
	IF  shift 70
	READ  shift 71
	WHILE  shift 72
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 76
	'}'  shift 114
	.  error

	statement  goto 78
	exp  goto 79
	if_else  goto 80
	while  goto 81
	ternario  goto 82


state 84
	func_def : VOID ID '(' opt_list_param ')' '{' opt_list_local_var statements '}' .  (17)

	.  reduce 17


state 85
	exp : ID . '(' opt_list_exp ')'  (71)
	exp : ID .  (76)

	'('  shift 115
	EQ  reduce 76
	OR  reduce 76
	AND  reduce 76
	NOT_EQ  reduce 76
	G_EQ  reduce 76
	L_EQ  reduce 76
	'='  reduce 76
	'>'  reduce 76
	'<'  reduce 76
	'+'  reduce 76
	'-'  reduce 76
	'*'  reduce 76
	'/'  reduce 76
	'%'  reduce 76
	'['  reduce 76
	']'  reduce 76
	'.'  reduce 76
	')'  reduce 76
	';'  reduce 76
	','  reduce 76
	':'  reduce 76


state 86
	exp : '(' . p_type ')' exp  (68)
	exp : '(' . exp ')'  (73)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	DOUBLE  shift 4
	CHAR  shift 5
	INT  shift 7
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	p_type  goto 96
	exp  goto 116


state 87
	statement : RETURN exp . ';'  (33)
	exp : exp . '+' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '-' exp  (58)
	exp : exp . '%' exp  (59)
	exp : exp . EQ exp  (60)
	exp : exp . NOT_EQ exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . '<' exp  (63)
	exp : exp . L_EQ exp  (64)
	exp : exp . G_EQ exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . '[' exp ']'  (69)
	exp : exp . '.' ID  (70)

	EQ  shift 98
	OR  shift 99
	AND  shift 100
	NOT_EQ  shift 101
	G_EQ  shift 102
	L_EQ  shift 103
	'>'  shift 105
	'<'  shift 106
	'+'  shift 107
	'-'  shift 108
	'*'  shift 109
	'/'  shift 110
	'%'  shift 111
	'['  shift 112
	'.'  shift 113
	';'  shift 117
	.  error


state 88
	statement : ID '(' . opt_list_exp ')' ';'  (39)
	exp : ID '(' . opt_list_exp ')'  (71)
	opt_list_exp : .  (52)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	')'  reduce 52

	exp  goto 89
	list_exp  goto 118
	opt_list_exp  goto 119


state 89
	list_exp : exp .  (54)
	exp : exp . '+' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '-' exp  (58)
	exp : exp . '%' exp  (59)
	exp : exp . EQ exp  (60)
	exp : exp . NOT_EQ exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . '<' exp  (63)
	exp : exp . L_EQ exp  (64)
	exp : exp . G_EQ exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . '[' exp ']'  (69)
	exp : exp . '.' ID  (70)

	EQ  shift 98
	OR  shift 99
	AND  shift 100
	NOT_EQ  shift 101
	G_EQ  shift 102
	L_EQ  shift 103
	'>'  shift 105
	'<'  shift 106
	'+'  shift 107
	'-'  shift 108
	'*'  shift 109
	'/'  shift 110
	'%'  shift 111
	'['  shift 112
	'.'  shift 113
	')'  reduce 54
	';'  reduce 54
	','  reduce 54


state 90
	statement : WRITE list_exp . ';'  (35)
	list_exp : list_exp . ',' exp  (53)

	';'  shift 120
	','  shift 121
	.  error


state 91
	if_else : IF '(' . exp ')' '{' statements '}' ELSE '{' statements '}'  (45)
	if_else : IF '(' . exp ')' '{' statements '}' ELSE statement  (46)
	if_else : IF '(' . exp ')' statement ELSE '{' statements '}'  (47)
	if_else : IF '(' . exp ')' statement ELSE statement  (48)
	if_else : IF '(' . exp ')' '{' statements '}'  (49)
	if_else : IF '(' . exp ')' statement  (50)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	exp  goto 122


state 92
	statement : READ list_exp . ';'  (34)
	list_exp : list_exp . ',' exp  (53)

	';'  shift 123
	','  shift 121
	.  error


state 93
	while : WHILE '(' . exp ')' '{' statements '}'  (43)
	while : WHILE '(' . exp ')' statement  (44)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	exp  goto 124


state 94
	exp : exp . '+' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '-' exp  (58)
	exp : exp . '%' exp  (59)
	exp : exp . EQ exp  (60)
	exp : exp . NOT_EQ exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . '<' exp  (63)
	exp : exp . L_EQ exp  (64)
	exp : exp . G_EQ exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . '[' exp ']'  (69)
	exp : exp . '.' ID  (70)
	exp : '!' exp .  (74)

	EQ  shift 98
	NOT_EQ  shift 101
	G_EQ  shift 102
	L_EQ  shift 103
	'>'  shift 105
	'<'  shift 106
	'+'  shift 107
	'-'  shift 108
	'*'  shift 109
	'/'  shift 110
	'%'  shift 111
	'['  shift 112
	'.'  shift 113
	OR  reduce 74
	AND  reduce 74
	'='  reduce 74
	']'  reduce 74
	')'  reduce 74
	';'  reduce 74
	','  reduce 74
	':'  reduce 74


state 95
	exp : exp . '+' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '-' exp  (58)
	exp : exp . '%' exp  (59)
	exp : exp . EQ exp  (60)
	exp : exp . NOT_EQ exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . '<' exp  (63)
	exp : exp . L_EQ exp  (64)
	exp : exp . G_EQ exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . '[' exp ']'  (69)
	exp : exp . '.' ID  (70)
	exp : '-' exp .  (72)

	'['  shift 112
	'.'  shift 113
	EQ  reduce 72
	OR  reduce 72
	AND  reduce 72
	NOT_EQ  reduce 72
	G_EQ  reduce 72
	L_EQ  reduce 72
	'='  reduce 72
	'>'  reduce 72
	'<'  reduce 72
	'+'  reduce 72
	'-'  reduce 72
	'*'  reduce 72
	'/'  reduce 72
	'%'  reduce 72
	']'  reduce 72
	')'  reduce 72
	';'  reduce 72
	','  reduce 72
	':'  reduce 72


state 96
	exp : '(' p_type . ')' exp  (68)

	')'  shift 125
	.  error


state 97
	ternario : '(' exp . ')' '?' statement ':' statement ';'  (41)
	exp : exp . '+' exp  (55)
	exp : exp . '*' exp  (56)
	exp : exp . '/' exp  (57)
	exp : exp . '-' exp  (58)
	exp : exp . '%' exp  (59)
	exp : exp . EQ exp  (60)
	exp : exp . NOT_EQ exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . '<' exp  (63)
	exp : exp . L_EQ exp  (64)
	exp : exp . G_EQ exp  (65)
	exp : exp . AND exp  (66)
	exp : exp . OR exp  (67)
	exp : exp . '[' exp ']'  (69)
	exp : exp . '.' ID  (70)
	exp : '(' exp . ')'  (73)

	EQ  shift 98
	OR  shift 99
	AND  shift 100
	NOT_EQ  shift 101
	G_EQ  shift 102
	L_EQ  shift 103
	'>'  shift 105
	'<'  shift 106
	'+'  shift 107
	'-'  shift 108
	'*'  shift 109
	'/'  shift 110
	'%'  shift 111
	'['  shift 112
	'.'  shift 113
	')'  shift 126
	.  error


state 98
	exp : exp EQ . exp  (60)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	exp  goto 127


state 99
	exp : exp OR . exp  (67)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	exp  goto 128


state 100
	exp : exp AND . exp  (66)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	exp  goto 129


state 101
	exp : exp NOT_EQ . exp  (61)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	exp  goto 130


state 102
	exp : exp G_EQ . exp  (65)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	exp  goto 131


state 103
	exp : exp L_EQ . exp  (64)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	exp  goto 132


state 104
	statement : exp '=' . exp ';'  (38)
	ternario : exp '=' . '(' exp ')' '?' exp ':' exp ';'  (42)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 133
	.  error

	exp  goto 134


state 105
	exp : exp '>' . exp  (62)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	exp  goto 135


state 106
	exp : exp '<' . exp  (63)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	exp  goto 136


state 107
	exp : exp '+' . exp  (55)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 85
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 86
	.  error

	exp  goto 137


state 108
	exp : exp '-' . exp  (58)
